--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    box-sizing: border-box;
     background: #ffffff;
     margin: 0;
     padding: 0;
@@ -12,34 +13,40 @@ body{
     background: #EBFCFF;
 }
 .header-content{
-    padding: 10px 180px;
+    padding: 10px 0;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
 }
 .navbar {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     font-family: 'Rubik', sans-serif;
-    
-
 }
+
 .menu{
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+}
+.logo {
+    margin-right: 80px;
 }
 .menu-items {
     display: flex;
+    flex-wrap: wrap;
     list-style-type: none;
-    
-    
+    gap: 34px;
+    padding: 0;
 }
 .menu-items a {
     text-decoration: none;
-    padding: 12px 20px;
     color: #636363;
     font-family: 'Rubik', sans-serif;
     font-size: 15px;
     font-weight: 600px;
-
 }
 .login-button button{
     background-color: #ED6710;
@@ -109,6 +116,17 @@ body{
     right: 0;
     top: 100px;
 }
+@media screen and (max-width: 768px) {
+    .banner-image {
+        display: none;
+    }
+  }
+
+@media screen and (max-width: 768px) {
+.banner-image-mini {
+    display: none;
+}
+}
 
 .banner-image-mini-man {
     position: absolute;
@@ -141,7 +159,10 @@ body{
     font-weight: bold;
 }
 .clients {
-    padding: 100px 180px;
+    padding: 100px 0;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
     font-family: 'Rubik', sans-serif;
     font-weight: 500;
     
@@ -159,10 +180,11 @@ body{
 }
 .clients-images {
     display: flex;
+    flex-wrap: wrap;
+    gap: 60px;
     justify-content: space-between;
-    margin-top: 60px;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-top: 60px ;
+    overflow-x: hidden;
 }
 .cashia{
     display: grid;
@@ -173,7 +195,9 @@ body{
     place-items: center;
 } 
 .offers {
-    margin: 0 180px;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
     padding: 64px 81px 41px 81px;
     background: #50A0AF;
     border-radius: 40px;
@@ -182,6 +206,7 @@ body{
 
 .offers-title {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     color: #fff;
     font-family: 'Rubik', sans-serif;
@@ -199,6 +224,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 10px;
 }
 .offers-arrow-back {
     background: #ED6710;
@@ -216,20 +242,30 @@ body{
 }
 .cards {
     display: flex;
+    flex-wrap: wrap;
     gap: 25px;
     justify-content: space-between;
     margin-top: 50px;
+    align-items: center;
 }
 .card {
     background: #fff;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
     border-radius: 5px;
-    width: 30%;
+    width: 240px;
+    height: 336px;
+    margin-left: auto;
+    margin-right: auto;
 }
+@media screen and (max-width: 768px) {
+    .card {
+      width: 450px;
+      height: auto;
+      align-items: center;
+    }
+  }
 .card img {
     width:100%;
-    height: 160px;
 }
 .card-container {
     padding: 14px 32px;
@@ -250,6 +286,7 @@ body{
 
 .packages {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     margin-top: 44px;
@@ -257,10 +294,7 @@ body{
 .ellipses {
     display: flex;
     gap: 12px;
-    margin-left: 150px;
 }
-
-
 
 .packages-button button{
     background: #ED6710;
@@ -289,15 +323,21 @@ body{
     font-style: normal;
     font-weight: 500;
     max-width: 636px;
+    margin: 0 20px;
     font-size: 32px;
     text-transform: capitalize;
     color: #50A0AF;
 }
 .resources {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    margin-bottom: 54px;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 20px;
 }
 .big-ellipse {
     display: flex;
@@ -308,15 +348,9 @@ body{
     width: 50px;
     border-radius: 50%;
 }
-.resources {
-    display: flex;
-    margin-bottom: 54px;
-    padding: 0 180px;
-}
 .resources-options {
     display: grid;
     place-items: center;
-    width: 33.3333333%;
 }
 .resources-options p{
     font-family: 'Crimson Pro', sans-serif;
@@ -326,7 +360,7 @@ body{
     color: #ED6710;
 }
 .resources-options div {
-   max-width: 288px;
+    max-width: 288px;
     font-family: 'Rubik', sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -337,8 +371,10 @@ body{
 .budget {
     background: #EAF8FA;
     border-radius: 40px;
-    margin: 0 180px;
-    padding: 64px 81px 41px 81px;
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 64px;
 }
 .budget-fit {
     font-family: 'Rubik', sans-serif;
@@ -360,13 +396,14 @@ body{
 }
 .business {
     display: flex;
-    gap: 40px;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 .business-scale {
     display: grid;
     gap: 20px;
     background: #fff;
-    padding: 24px 77px;
+    padding: 24px;
     border-radius: 16px;
 }
 .business-scale p{
@@ -406,8 +443,16 @@ body{
 .faqs {
     display: flex;
     justify-content: space-between;
-    padding: 100px 180px;
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 100px 0;
 }
+@media screen and (max-width: 1024px) {
+    .faqs {
+      justify-content: center;
+    }
+  }
 .questions {
     display: flex;
     justify-content: left;
@@ -417,16 +462,38 @@ body{
     font-weight: 400;
     font-size: 20px;
     line-height: 125%;
-    text-align: center;
+    text-align: left;
     color: #1A1A1A;
 }
 .questions img {
     margin-right: 11px;
 }
-.feedbacks {
-    padding: 100px 180px;
+.faq-image {
+    display: flex;
+}
+@media screen and (max-width: 1024px) {
+    .faq-image {
+      display: none;
+    }
+  }
+.faq-text{
+    margin-bottom: 20px;
+    font-family: 'Rubik', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 32px;
+    text-transform: capitalize;
+    color: #50A0AF;
+}
+.feedbacks-bg {
     background: #EBFCFF;
 
+}
+.feedbacks {
+    padding: 100px 0;
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
 }
 .avatar {
     display: flex;
@@ -438,10 +505,15 @@ body{
 
 .feedback-info {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
-    gap: 43px;
+    gap: 10px;
 }
+@media screen and (max-width: 768px) {
+    .feedback-info {
+      justify-content: center;
+    }
+  }
 .men{
     background: #ffffff;
     
@@ -485,13 +557,19 @@ body{
     display: flex;
     gap: 12px;
 }
-footer {
+.footer-bg {
     background: #50A0AF;
     color: #fff;
-    padding: 100px 180px;
+}
+.footer {
+    padding: 100px 0;
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
 }
 .footer-links {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     border-top: 1px solid #FFFFFF;
@@ -506,12 +584,11 @@ footer {
 }
 .footer-content {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 20px;
+    flex-wrap: wrap;
+    gap: 40px;
 }
 .footer-items{
-    width: 25%;
+    flex: 0 0 25%;
     font-family: 'Rubik', sans-serif;
 }
 .footer-items b{
@@ -548,6 +625,7 @@ footer {
 }
 .footer-social{ 
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     gap: 5px;
