--- a/style.css
+++ b/style.css
@@ -397,7 +397,8 @@ body{
 .business {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    justify-content: space-between;
+    gap: 40px;
 }
 .business-scale {
     display: grid;
@@ -405,6 +406,7 @@ body{
     background: #fff;
     padding: 24px;
     border-radius: 16px;
+    max-width: 500px;
 }
 .business-scale p{
     font-family: 'Crimson Pro', sans-serif;
@@ -420,10 +422,10 @@ body{
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    letter-spacing: 0.01em;
     text-transform: capitalize;
     color: #4D4D4D;
 }
+
 .business-scale .explore {
     font-family: 'Inter';
     font-style: normal;
