--- a/style.css
+++ b/style.css
@@ -72,6 +72,16 @@ body{
     border-radius: 33px;
     padding: 2px 30px;
 }
+@media screen and (max-width: 768px) {
+    .notice-button button {
+        font-size: 12px;
+    }
+  }
+  @media screen and (max-width: 500px) {
+    .notice-button button{
+        display: none;
+    }
+  }
 .notice-text{ 
     display: flex;
     justify-content: center;
@@ -198,7 +208,7 @@ body{
     width: 75%;
     margin-left: auto;
     margin-right: auto;
-    padding: 64px 81px 41px 81px;
+    padding: 64px;
     background: #50A0AF;
     border-radius: 40px;
     
