--- a/style.css
+++ b/style.css
@@ -268,6 +268,11 @@ body{
     align-items: center;
     margin-top: 10px;
 }
+@media screen and (max-width: 768px) {
+    .offers-arrow {
+        display: none;
+    }
+  }
 .offers-arrow-back {
     background: #ED6710;
     border: none;
@@ -337,7 +342,11 @@ body{
     display: flex;
     gap: 12px;
 }
-
+@media screen and (max-width: 1444px) {
+    .ellipses {
+        display: none;
+    }
+  }
 .packages-button button{
     background: #ED6710;
     border: none;
